# pancake-wizard

./: .env  .env.example  .eslintrc.cjs  .eslintrc.js  .gitignore  LICENSE  README.md  bnbpp-abi.js  index.html  index.js  jest.config.js  package.json  pnpm-lock.yaml  tailwind.config.cjs  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
scripts/: build-extension.sh
src/: App.tsx  candle-genie.ts  candlegenie-bnb.ts  candlegenie-btc.ts  candlegenie-eth.ts  dogebets.ts  index.ts  lib.test.ts  lib.ts  main.tsx  pancakeswap.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/abi/: DogeBetsPrediction.json  PancakePrediction.json
src/components/change-settings/: change-settings.tsx
src/components/start-stop-bot/: start-stop-bot.tsx
src/components/stats/: stats.tsx
src/extension/: background.ts  manifest.json
src/extension/popup/: app.jsx  app.tsx  popup.html
src/extension/popup/components/: Config.tsx  Info.tsx  Main.tsx
src/lib/: atoms.ts  calculate-is-bullish.ts  check-and-bet.ts  check-and-claim.ts  notify.ts  pancake-prediction-contract-config.ts  signer.ts  start-bot.ts  utils.ts  wagmi-client.ts
src/types/ethers-contracts/: DogeBetsPrediction.ts  PancakePrediction.ts  index.ts
src/types/ethers-contracts/factories/: DogeBetsPrediction__factory.ts  PancakePrediction__factory.ts  index.ts
src/types/typechain/: CandleGeniePredictionV3.d.ts  PancakePredictionV2.d.ts  index.ts
src/types/typechain/factories/: CandleGeniePredictionV3__factory.ts  PancakePredictionV2__factory.ts
